# VulkanSift

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  ShaderUtils.cmake
cmake/: ShaderUtils.cmake  VulkanSiftConfig.cmake.in
docs/: Performances.md
include/vulkansift/: types.h  vulkansift.h  vulkansift_types.h
scripts/: gen_embedded_shader_code.py  hannover_runtime_perf.py  oxford_runtime_perf.py  plot_matching_results.py  plot_oxford_runtime_perf.py
src/examples/: test.cpp  test_sift_detect.cpp  test_sift_error_handling.cpp  test_sift_gpu_debug.cpp  test_sift_match.cpp  test_sift_show_pyr.cpp  test_utils.cpp  test_utils.h
src/perf/: perf_common.cpp  perf_common.h  perf_matching.cpp  perf_runtime.cpp
src/perf/wrappers/: opencv_wrapper.cpp  opencv_wrapper.h  popsift_wrapper.cpp  popsift_wrapper.h  siftgpu_wrapper.cpp  siftgpu_wrapper.h  vlfeat_wrapper.cpp  vlfeat_wrapper.h  vulkansift_wrapper.cpp  vulkansift_wrapper.h  wrapper.h
src/vulkansift/: sift_detector.c  sift_detector.h  sift_matcher.c  sift_matcher.h  sift_memory.c  sift_memory.h  types.h  vulkan_instance.cpp  vulkan_instance.h  vulkansift.c  vulkansift.cpp  vulkansift.h
src/vulkansift/legacy/: vulkan_instance.h
src/vulkansift/legacy/sift/: sift_detector.h  sift_feature.h
src/vulkansift/legacy/sift/shaders/: ExtractKeypoints.comp
src/vulkansift/legacy/utils/: GLFW_loader.h  logger.h  vulkan_loader.cpp  vulkan_loader.h  vulkan_utils.cpp
src/vulkansift/legacy/viz/: vulkan_viewer.cpp  vulkan_viewer.h
src/vulkansift/shaders/: ComputeDescriptors.comp  ComputeOrientation.comp  DifferenceOfGaussian.comp  ExtractKeypoints.comp  GaussianBlurInterpolated.comp  Get2NearestNeighbors.comp
src/vulkansift/sift/: sift_detector.cpp  sift_detector.h  sift_feature.h  sift_matcher.cpp  sift_matcher.h
src/vulkansift/sift/shaders/: ComputeDescriptors.comp  ComputeOrientation.comp  DifferenceOfGaussian.comp  ExtractKeypoints.comp  GaussianBlur.comp  Get2NearestNeighbors.comp
src/vulkansift/utils/: GLFW_loader.cpp  vulkan_utils.cpp  vulkan_utils.h
src/vulkansift/viz/shaders/: shader.frag  shader.vert
src/vulkansift/vkenv/: debug_presenter.c  debug_presenter.h  logger.c  logger.h  vulkan_device.c  vulkan_device.h  vulkan_loader.c  vulkan_loader.h  vulkan_surface.c  vulkan_surface.h  vulkan_swapchain.c  vulkan_swapchain.h  vulkan_utils.c  vulkan_utils.h
